--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,12 @@ asgiref==3.8.1
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 cryptography==42.0.5
 defusedxml==0.8.0rc2
 distlib==0.3.8
+dj-database-url==2.1.0
 Django==4.2.11
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
@@ -17,6 +20,7 @@ drf-nested-routers==0.93.5
 drf-yasg==1.21.7
 filelock==3.13.4
 gunicorn==22.0.0
+h11==0.14.0
 idna==3.6
 inflection==0.5.1
 oauthlib==3.2.2
@@ -36,7 +40,9 @@ setuptools==69.2.0
 social-auth-app-django==5.4.0
 social-auth-core==4.5.3
 sqlparse==0.4.4
+typing_extensions==4.11.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+uvicorn==0.29.0
 virtualenv==20.25.1
